--- a/CalculationWorkerRole/app.config
+++ b/CalculationWorkerRole/app.config
@@ -7,15 +7,14 @@
   <system.diagnostics>
     <trace>
       <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
           <filter type="" />
         </add>
       </listeners>
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="spacebottle_dbEntities" connectionString="metadata=res://*/SpaceBottle.csdl|res://*/SpaceBottle.ssdl|res://*/SpaceBottle.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:mo92eitxin.database.windows.net,1433;initial catalog=spacebottle_db;user id=azuresql;password=63#pIJcv;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="spacebottle_dbEntities" connectionString="metadata=res://*/SpaceBottleModels.csdl|res://*/SpaceBottleModels.ssdl|res://*/SpaceBottleModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:mo92eitxin.database.windows.net,1433;initial catalog=spacebottle_db;persist security info=True;user id=azuresql;password=63#pIJcv;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -26,4 +25,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.19.0" newVersion="4.2.19.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
